Tue Nov 07 13:31:10 UTC 2006  Martin Corino  <mcorino@remedy.nl>

        * include/makeinclude/platform_vxworks6.3.GNU:

          Fixed build settings for PPC32 builds with softfloat.

Tue Nov  7 10:38:25 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * tests/Naming_Test.cpp:

          Moved an ::open out of an ACE_ASSERT. It wasn't getting performed on
          some builds.

Tue Nov  7 09:56:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Misc/basic_func.{h,cpp}:
          Renamed B to BB to resolve compile problems on rtems where we
          have also a typedef B

Tue Nov  7 07:52:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.h:
          Also rtems defines log2, use the same workaround as with cygwin

        * include/makeinclude/platform_rtems.x_g++.GNU:
          Removed -ansi

Tue Nov  7 01:47:46 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Sock_Connect.cpp (count_interfaces):
          Another scoreboard fix.

Mon Nov  6 20:52:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/Gateway/Gateway/Config_Files.{h,cpp}:
        * apps/Gateway/Gateway/File_Parser.{h,cpp}:
        * apps/Gateway/Gateway/Gateway.cpp:
          Renamed class FP to FPRT. This resolves the compile errors on
          rtems where a struct FP does exist

Mon Nov  6 16:52:14 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Sock_Connect.cpp:
          My fix for Solaris x86 broke HPUX. The trouble is that the
          method ACE::count_interfaces() is only used by the "generic"
          implementation of get_ip_interfaces(). Probably a better
          solution is to remove count_interfaces() and move its
          functionality into the get_ip_interfaces() implementation, but
          that is a bigger change than I care to make at the moment. I
          think it should be possible to do so in a way that also reduces